--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,21 +1,28 @@
-.App {
+
+
+
+
+
+.main-page {
+background-color: aquamarine;
+align-content: center;
+padding: 10px;
+}
+.header-card {
+  background-color: darkslategray;
+  align-content: center;
+  margin-left: 25%;
+  margin-right: 25%;
+  padding:10px;
   text-align: center;
 }
-
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.book-card{
+  background-color: midnightblue;
   color: white;
+  padding: 10px;
+  margin: 15px;
 }
+.card-title{
+  text-align: center;
 
-.App-link {
-  color: #61dafb;
 }
-
